--- a/기업형홈페이지/homepage.css
+++ b/기업형홈페이지/homepage.css
@@ -12,12 +12,13 @@ a {
 }
 
 .menu_pic {
-  background-image: url("./img/chemical\ research\ 2.png");
+  background-image: url("./img/int4.png");
   background-repeat: no-repeat;
   background-image: cover;
   background-position:center;
   width: 100%;
-  height: 500px;
+  height: 1100px;
+  opacity: 110%;
 }
 .title_menu {
   width: 100%;
@@ -25,9 +26,12 @@ a {
   align-items: center;
   justify-content:space-between
 }
-.title_menu > .logo {}
+.title_menu > .logo {
+  margin-left: 50px;
+}
 .title_menu > .logo > div > i {
-  font-size: 60px;
+  font-size: 80px;
+
 }
 .title_menu > .mode {
 }
@@ -43,5 +47,38 @@ a {
 }
 
 .title_menu > .toggleline {
-  font-size: 60px;
+  font-size: 80px;
+  margin-right: 50px;
+}
+
+.t_intro {
+  margin-top: 260px;
+  justify-content: center;
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.t_intro > section > h1 {
+  font-size: 90px;
+  font-weight: bold;
+  margin-right: 400px;
+  color: blueviolet;
+}
+
+
+.t_intro > section > p {
+  font-size: 25px;
+  margin-right: 400px;
+  font-weight : 100px;
+  color: white;
+}
+.intro > div {
+ justify-content: center;
+ display: flex;
+ 
+}
+
+
+.intro > div > .int {
+  display: flex;
 }
