--- a/기업형홈페이지/homepage.css
+++ b/기업형홈페이지/homepage.css
@@ -38,7 +38,7 @@ button {
   margin-left: 100px;
 }
 .title_menu > .logo > div > i {
-  font-size: 80px;
+  font-size: 60px;
 
 }
 
@@ -54,7 +54,7 @@ button {
 }
 
 .title_menu > .toggleline {
-  font-size: 80px;
+  font-size: 60px;
   margin-right: 100px;
 }
 
@@ -108,8 +108,12 @@ button {
   font-size: 25px;
   width: 175px;
   height: 50px;
-  background-color: aliceblue;
+  background-color: white;
   border: 1px solid black;
+}
+.intro > .int > section  > button:hover{
+  border: 3px solid blueviolet;
+
 }
 
 .tro {
@@ -181,9 +185,15 @@ background-position: center;
   font-size: 25px;
   width: 100px;
   height: 50px;
-  background-color: aliceblue;
-  border: 1px solid black;
+  background-color: transparent;
+  border: 2px solid white;
   cursor: pointer;
+}
+
+.intro2 >div > .head > button:hover {
+
+  border: 3px solid blueviolet;
+
 }
 
 
@@ -210,6 +220,7 @@ background-position: center;
   width: 310px;
   height: 500px;
   backdrop-filter: blur(30px);
+  background-color: rgba(255, 255, 255, 0.3);
   text-align: start;
 }
 
@@ -255,6 +266,7 @@ background-position: center;
   border: 1px solid transparent;
   width: 310px;
   height: 500px;
+  background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(30px);
   text-align: start;
 }
@@ -365,7 +377,6 @@ background-position: center;
   border: 1px dotted white;
   box-sizing: border-box;
   font-size: 25px;
-  background;
   margin: 0;
   color: aliceblue;
 }
@@ -424,8 +435,8 @@ line-height: 40px;
   text-align: center;
   width: 90px;
   cursor: pointer;
-  color:white;
-  text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;} 
+  color:white;}
+  
 
 .site > .product > button:hover {
   border:3px, solid rgba(138, 43, 226, 0.8); /* blueviolet 색상을 rgba로 변경 */
@@ -590,22 +601,64 @@ margin-top: 100px;
 }
 footer {
   width: 100%;
+  background-color: rgb(4, 4, 49);
+  margin-top: 50px;
+  height: 400px;
 }
 
 .footer_menu {
   display: flex;
-  align-content: space-between;
-  justify-content: center;
+  justify-content: space-between;
+  height: 200px;
+  color: white;
 }
 
 .footer_menu > .logo  > div > i{
-  width: 100px;
-  height:100px;
+  margin-left: 40px;
+  margin-top: 55px;
+  font-size: 80px;
 }
 
 .footer_menu > .mode > ul {
   display: flex;
-  align-content: space-around;
+  align-content: space-between;
   justify-content: center;
+  font-size: 20px;
+  margin-top: 80px;
+  margin-right: 50px;
 
+}
+
+
+.footer_menu > .mode > ul > li {
+  margin: 0px 50px;
+}
+
+footer > .last {
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  border-top:1px solid white;
+  align-items: center;
+ 
+}
+
+footer > .last > ul
+{
+ margin-top: 10px;  
+ color: white;
+ margin-left: 40px;
+}
+
+footer > .last > .person > li
+{ display:inline-block;
+  gap:50px;
+  margin-top: 30px;
+  margin-bottom:50px;
+  color: white;
+  margin-right: 100px;
+}
+
+footer > .last > .person > .smail:nth-child(1)
+{ font-size: 1px;
 }
