--- a/웹페이지만들기/css/style.css
+++ b/웹페이지만들기/css/style.css
@@ -40,7 +40,36 @@ img{
   margin:2rem 0;
   transition: .4s;
 }
+.fadein{
+opacity: 0;
+}
 /*==========================================*/
+/*모달창*/
+#open,
+#close {
+    background: #ed8;
+    border: 3px solid #eb8;
+    border-radius: .5rem;
+    padding: 1rem 2rem;
+    cursor: pointer;
+}
+#modal {
+    background: rgba(0, 0, 0, .6);
+    position: fixed;
+    inset: 0;
+    z-index: 9998;
+    opacity: 0;
+    visibility: hidden;
+}
+#modal-content {
+    background: #fff;
+    max-width: 36rem;
+    padding: 2rem;
+    border-radius: .5rem;
+    position: absolute;
+    inset: 10rem 0 auto;
+    margin: auto;
+}
 
 .wrapper{
   max-width:38rem;
