--- a/사이트만들기/css/style.css
+++ b/사이트만들기/css/style.css
@@ -1,9 +1,10 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
-ul, li {
+ul,
+li {
   list-style: none;
 }
 
@@ -12,10 +13,14 @@ a {
   text-decoration: none;
 }
 
-.re {
-  width: 1920px;
-  height: 1400px;
+.start {
+  height:903px;
 
+}
+.re {
+  width: 100%;
+  height: 100%;
+  
 }
 
 .menu {
@@ -27,22 +32,30 @@ a {
   background-color: black;
   display: flex;
   color: white;
-  justify-content: space-between; 
+  justify-content: space-between;
   font-size: 30px;
   z-index: 999;
-  transition:top .3s;
+  transition: top 0.3s;
 }
 
-.menu > .bn1, .bn2, .bn3, .bn4 {
+.menu > .bn1,
+.bn2,
+.bn3,
+.bn4 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap:40px;
+  gap: 120px;
+}
+
+.menu > .bn1,
+.bn4 {
+  margin: 40px;
 }
 
 
 
-.menu-icon{
+.menu-icon {
   width: 30px;
   height: 20px;
   display: flex;
@@ -57,37 +70,204 @@ a {
   height: 4px;
   background-color: white;
   transition: all 0.3s ease; /* 부드러운 전환 효과 */
-
-
 }
 
-.menu-icon.active span:nth-child(1)
-{
-  transform:rotate(45deg);
+.menu-icon.active span:nth-child(1) {
+  transform: rotate(45deg);
   position: relative;
-  
 }
 
-.menu-icon.active span:nth-child(2)
-{
-  transform:rotate(-45deg);
+.menu-icon.active span:nth-child(2) {
+  transform: rotate(-45deg);
   position: relative;
-  top:-15px;
+  top: -15px;
 }
 
 .hide {
-  z-index: 40;
+  z-index: -20;
   position: relative;
-  top:150px;
+  top: 150px;
   background-color: black;
   color: white;
   display: flex;
-  gap : 200px;
-  border-top:1px solid white ;
-  font-size: 20px;
-}
-
-.hide ul:nth-child(1){
-margin-left: 200px;
+  gap: 116.7px;
+  border-top: 1px solid white;
+  font-size: 25px;
+  height: 100%;
   
 }
+
+
+.hide > ul {
+margin-top: 20px;
+z-index: -20;
+
+}
+
+
+.hide > ul >li {
+padding:20px;
+}
+  
+
+
+
+
+.hide ul:nth-child(1) {
+  margin-left: 360px;
+}
+
+.hide.active {
+  z-index: 1;
+  transition: 0s;
+}
+
+.canvas {
+  position: relative;
+}
+
+.canvas > .videos {
+  width: 100%;
+  height: 100%;
+  z-index: -5;
+  position: absolute;
+  top:-165px
+}
+
+.word {
+  position: absolute;
+  top: 60%;
+  left: 5%;
+  font-size: 50px;
+  color: white;
+  -webkit-text-stroke: 3.5px black;
+  animation: fadeInout 5s infinite;
+}
+
+@keyframes fadeInout {
+  0% {
+    opacity: 0;
+    transform:translateX(-100px);
+  }
+
+  50% {
+    opacity: 1;
+    transform:translateX(0px);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
+.second_page {
+  position:absolute;
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+
+.second_page > .titles {
+margin-left: 40px;
+margin-top: 70px;
+margin-bottom: 70px;
+}
+
+.second_page > .titles > h1{
+  opacity: 0.7;
+  font-size: 50px;
+  letter-spacing: -1px;
+  }
+
+
+  .slideshow {
+    width: 100%;
+    height: 300px;
+    margin: 150px auto 0;
+    position: relative;
+  }
+  /*버튼*/
+  .left-btn,
+  .right-btn {
+    font-size: 50px;
+    line-height: 50px;
+    color: #fff;
+    position: absolute;
+    top: calc(80% - 25px);
+    padding: 0;
+  }
+  .right-btn {
+    right: 200px;
+  }
+  .left-btn
+{
+  left: 200px;
+}
+
+  /*콘텐츠*/
+  .content {
+    width: 900px;
+    height: 180px;
+    perspective: 950px;
+    position: absolute;
+    top: calc(50% - 20px);
+    left: calc(50% - 450px);
+  }
+
+  .content-carrousel {
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: 0.5s;
+  }
+  .content-carrousel > figure {
+    width: 150px;
+    height: 150px;
+    border: 1px solid #4d444d;
+    box-shadow: 0 0 20px #000;
+    position: absolute;
+    left: calc(50% - 75px);
+  }
+  .content-carrousel > figure:nth-child(1) {
+    transform: rotateY(0deg) translateZ(400px);
+  }
+  .content-carrousel > figure:nth-child(2) {
+    transform: rotateY(40deg) translateZ(400px);
+  }
+  .content-carrousel > figure:nth-child(3) {
+    transform: rotateY(80deg) translateZ(400px);
+  }
+  .content-carrousel > figure:nth-child(4) {
+    transform: rotateY(120deg) translateZ(400px);
+  }
+  .content-carrousel > figure:nth-child(5) {
+    transform: rotateY(160deg) translateZ(400px);
+  }
+  .content-carrousel > figure:nth-child(6) {
+    transform: rotateY(200deg) translateZ(400px);
+  }
+  .content-carrousel > figure:nth-child(7) {
+    transform: rotateY(240deg) translateZ(400px);
+  }
+  .content-carrousel > figure:nth-child(8) {
+    transform: rotateY(280deg) translateZ(400px);
+  }
+  .content-carrousel > figure:nth-child(9) {
+    transform: rotateY(320deg) translateZ(400px);
+  }
+
+  .content-carrousel img {
+    transition: 0.3s ease;
+    width: 100%;
+    height: 100%;
+  }
+  .content-carrousel img:hover {
+    scale: 1.1;
+  }
+
+
+
+  /*미디어 쿼리부분*/
+
+ 
