--- a/사이트만들기/css/style.css
+++ b/사이트만들기/css/style.css
@@ -273,6 +273,7 @@ color: white;
 position: relative;
 z-index: 9;
 width: 100%;
+height: 400px;
   }
 
   .third_page > .num_log {
@@ -285,6 +286,7 @@ width: 100%;
     display: flex;
     align-content: center;
     justify-content: space-around;
+    flex-wrap: nowrap;
 
   }
 
@@ -293,16 +295,55 @@ width: 100%;
     display: flex;
   }
 
-  .third_page > section  > .numbers > .num {
-    display: flex;
-  }
+
 
   .third_page > section  > .numbers {
     border-left: 1p solid white;
     border-right: 1px solid white;
+    height: 600px;
   }
 
- 
+  .third_page > section > .numbers > .mum  {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 600px;
+}
+
+
+.third_page > section > .numbers > .mum > div:nth-child(1) {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 80px;
+  
+}
+
+
+.third_page > section > .numbers > .mum > div:nth-child(2) {
+ text-align: start;
+  font-size: 30px;
+  margin-top: 15px;
+  margin-left: 10px;
+}
+
+
+.third_page > section > .numbers > .mum2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.third_page > section > .numbers > .mum3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+
+
+
+
 
 
   /*미디어 쿼리부분*/
