--- a/사이트만들기/css/style.css
+++ b/사이트만들기/css/style.css
@@ -22,6 +22,9 @@ a {
   height: 100%;
   
 }
+body {
+  background-color: #000;
+}
 
 .menu {
   position: fixed;
@@ -300,7 +303,7 @@ height: 400px;
   .third_page > section  > .numbers {
     border-left: 1p solid white;
     border-right: 1px solid white;
-    height: 600px;
+    height: 180px;
   }
 
   .third_page > section > .numbers > .mum  {
@@ -340,6 +343,99 @@ height: 400px;
   justify-content: center;
 }
 
+.third_page > section > .numbers > .mum > div >i {
+   margin-top: 10px;
+   font-size: 130px;
+   margin-right:50px ;
+ }
+ 
+
+.four_page {
+  width: 100%;
+  background-color: black;
+  color: white;
+  height: 300px;
+  position: relative;
+}
+
+.four_page > div:nth-child(1) {
+  font-size: 20px;
+}
+
+.four_page > div:nth-child(2) {
+  font-size: 50px;
+  font-weight: bold;
+  margin-top: 250px;
+  margin-left: 60px;
+}
+
+.four_page > .canvas1 {
+  width: 100%;
+  height: 200px;
+  margin-left: 40px;
+  margin-right: 40px;
+  border: 1px solid white;
+  border-radius: 20px;
+  background-color: white;
+  position: absolute;
+  top: 500px
+
+
+
+}
+
+.four_page > .canvas2 {
+  width: 100%;
+  height: 200px;
+  margin-left: 40px;
+  margin-right: 40px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 20px;
+  background-color: white;
+  position: absolute;
+  top:100px;
+  z-index: 200;
+  top:780px;
+  box-shadow: 0px -10px 30px rgb(66, 66, 66)
+
+}
+
+.four_page > .canvas3 {
+  width: 100%;
+  height: 200px;
+  margin-left: 40px;
+  margin-right: 40px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 20px;
+  background-color: white;
+  position: absolute;
+  z-index: 400;
+  top: 1070px;
+ box-shadow: 0px -10px 30px rgb(66, 66, 66)
+}
+
+
+.four_page > .canvas {
+  height: 300px;
+}
+
+
+.four_page > .canvas > div:nth-child(1) {
+  margin-top: 10px;
+  margin-left: 20px;
+  color: black;
+  font-size: 25px;
+}
+
+
+ 
+.four_page > .canvas >.Corporation {
+display: flex;
+width: 100%;
+margin-top: 70px;
+justify-content: space-around;
+align-items: center;
+}
 
 
 
