--- a/사이트만들기/css/style.css
+++ b/사이트만들기/css/style.css
@@ -379,7 +379,10 @@ height: 400px;
   background-color: white;
   position: absolute;
   top: 500px;
-  display:none;
+  opacity: 0;
+ 
+
+  
 
 
 }
@@ -397,7 +400,7 @@ height: 400px;
   z-index: 200;
   top:780px;
   box-shadow: 0px -10px 30px rgb(66, 66, 66);
-  display:none;
+
 
 }
 
@@ -413,13 +416,9 @@ height: 400px;
   z-index: 400;
   top: 1070px;
  box-shadow: 0px -10px 30px rgb(66, 66, 66);
- display:none;
+
 }
 
-.active1 {
-  display: block;
-  transition: 1s;
-}
 
 .four_page > .canvas {
   height: 300px;
